fix: scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,18 @@ body {
 }
 
 .app {
-  max-width: 600px;
+  overflow-y: scroll; /* Allows scrolling */
+  max-width: 680px;
+  height: 100vh;
   margin: 0 auto;
   padding: 20px;
+
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.app::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
 }
 
 .password-item {
@@ -113,10 +122,10 @@ body {
   padding: 12px 12px;
   border: 1px solid #ccc;
   border-radius: 8px;
-  width: 380px;
+  width: 60%;
   margin-right: 10px;
   outline: none;
-  color: #000;
+  color: #1b4d3e; /* Changed text color */
 }
 
 .add-button {
@@ -178,7 +187,7 @@ body {
 }
 
 .dialog button.add-button {
-  background-color: #1b4d3e;
+  background-color: black;
   color: white;
   padding: 12px 100px;
 }
@@ -194,7 +203,7 @@ body {
   border: none;
   padding: 12px 18px;
   border-radius: 10px;
-  margin-right: 0px;
+  margin-left: 184px;
   background-color: #1b4d3e;
   color: #fff; /* Keeping this as it is */
   font-size: 16px;
